--- a/netflix-clone-app/package.json
+++ b/netflix-clone-app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "framer-motion": "^6.2.8",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.16",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +51,6 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24"
-  }
+  },
+  "homepage": "https://jdy8739.github.io/netflix-clone-app"
 }
